--- a/font/config.json
+++ b/font/config.json
@@ -1,104 +1,166 @@
 {
-  "name": "",
+  "name": "mail",
   "css_prefix_text": "icon-",
   "css_use_suffix": false,
   "hinting": true,
+  "units_per_em": 1000,
+  "ascent": 850,
   "glyphs": [
     {
-      "uid": "8b80d36d4ef43889db10bc1f0dc9a862",
-      "css": "user",
+      "uid": "0f6a2573a7b6df911ed199bb63717e27",
+      "css": "github-circled",
+      "code": 61595,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "47a1f80457068fbeab69fdb83d7d0817",
+      "css": "youtube-play",
+      "code": 61802,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "1145676a91138011729fa2909997af66",
+      "css": "linkedin-squared",
+      "code": 62220,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "6cc7af3e5b55720bcb6ef68372ce24be",
+      "css": "facebook-official",
+      "code": 62000,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f0cf7db1b03cb65adc450aa3bdaf8c4d",
+      "css": "gplus-squared",
+      "code": 61652,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "a42f298da5c64e646a5d532724cd6e15",
+      "css": "home-outline",
       "code": 59392,
+      "src": "typicons"
+    },
+    {
+      "uid": "ccc2329632396dc096bb638d4b46fb98",
+      "css": "mail-alt",
+      "code": 61664,
       "src": "fontawesome"
-    },
-    {
-      "uid": "381da2c2f7fd51f8de877c044d7f439d",
-      "css": "picture",
-      "code": 59394,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "5408be43f7c42bccee419c6be53fdef5",
-      "css": "doc-text",
-      "code": 59395,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "e335adbc2d898c7d85d40c507796e7b4",
-      "css": "mail",
-      "code": 59398,
-      "src": "entypo"
-    },
-    {
-      "uid": "978aa8facd816df874039e139cb0cdde",
-      "css": "trophy",
-      "code": 59393,
-      "src": "entypo"
-    },
-    {
-      "uid": "db112402805d9dadc01ce009fbfdb914",
-      "css": "paper-plane",
-      "code": 59396,
-      "src": "entypo"
     },
     {
       "uid": "91daf8fde1042a363514ca7e42d89570",
-      "css": "github-circled",
-      "code": 59406,
+      "css": "github-circled-1",
+      "code": 62209,
       "src": "entypo"
     },
     {
-      "uid": "0419da6446cb4f31093e2022793571ca",
-      "css": "twitter-circled",
-      "code": 59400,
-      "src": "entypo"
-    },
-    {
-      "uid": "ce1d525f3f31024c6a6b38f5e9a88953",
-      "css": "facebook-circled",
-      "code": 59399,
-      "src": "entypo"
-    },
-    {
-      "uid": "818a6c2a76c89800632c0335e9cdafee",
-      "css": "gplus-circled",
-      "code": 59401,
-      "src": "entypo"
+      "uid": "8669af50382b53c48b9b803692828dd0",
+      "css": "github-circled-alt2",
+      "code": 61526,
+      "src": "mfglabs"
     },
     {
       "uid": "2e9c0fdd4d59598cb122801ab80222e7",
       "css": "pinterest-circled",
-      "code": 59402,
+      "code": 62227,
+      "src": "entypo"
+    },
+    {
+      "uid": "381da2c2f7fd51f8de877c044d7f439d",
+      "css": "picture",
+      "code": 59393,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "11e664deed5b2587456a4f9c01d720b6",
+      "css": "cancel",
+      "code": 59394,
+      "src": "iconic"
+    },
+    {
+      "uid": "0419da6446cb4f31093e2022793571ca",
+      "css": "twitter-circled",
+      "code": 62218,
       "src": "entypo"
     },
     {
       "uid": "21adad41ffebf469b2370d26bcb8a3c4",
       "css": "linkedin-circled",
-      "code": 59403,
+      "code": 62233,
+      "src": "entypo"
+    },
+    {
+      "uid": "978aa8facd816df874039e139cb0cdde",
+      "css": "trophy",
+      "code": 59395,
+      "src": "entypo"
+    },
+    {
+      "uid": "38575a803c4da31ce20d77e1e1236bcb",
+      "css": "paper-plane",
+      "code": 61912,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "ce1d525f3f31024c6a6b38f5e9a88953",
+      "css": "facebook-circled",
+      "code": 62221,
       "src": "entypo"
     },
     {
       "uid": "ec3e0b50a56867ac26a6de47953b9831",
       "css": "dribbble-circled",
-      "code": 59404,
+      "code": 62236,
       "src": "entypo"
+    },
+    {
+      "uid": "199c44bca402ec5a6351f75ba5228375",
+      "css": "dribbble",
+      "code": 61821,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "bbd66ef66bb8fa9edde54d9a90b89150",
+      "css": "user-1",
+      "code": 59397,
+      "src": "entypo"
+    },
+    {
+      "uid": "5408be43f7c42bccee419c6be53fdef5",
+      "css": "doc-text",
+      "code": 61686,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "b945f4ac2439565661e8e4878e35d379",
+      "css": "gplus",
+      "code": 62223,
+      "src": "entypo"
+    },
+    {
+      "uid": "818a6c2a76c89800632c0335e9cdafee",
+      "css": "gplus-circled",
+      "code": 62224,
+      "src": "entypo"
+    },
+    {
+      "uid": "3958d12510001a1a172f088893506c27",
+      "css": "stumbleupon",
+      "code": 61860,
+      "src": "fontawesome"
     },
     {
       "uid": "e3606432570e59d4d852727bad063cd1",
       "css": "stumbleupon-circled",
-      "code": 59405,
+      "code": 62239,
       "src": "entypo"
     },
     {
-      "uid": "kfk635sf697exf2r3jqx06zz54e1rgx4",
+      "uid": "b08cfe8039de2ce815686aced2caef06",
       "css": "download",
-      "code": 59397,
-      "src": "modernpics"
-    },
-    {
-      "uid": "06301c50d89b5d3e651bd07ebd6d7de7",
-      "css": "cancel",
-      "code": 59407,
-      "src": "mfglabs"
+      "code": 59396,
+      "src": "entypo"
     }
   ]
 }
